--- a/carlos-pdf/package.json
+++ b/carlos-pdf/package.json
@@ -15,8 +15,9 @@
     "autoprefixer": "10.4.14",
     "next": "13.4.10",
     "postcss": "8.4.26",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
