--- a/carlos-pdf/package.json
+++ b/carlos-pdf/package.json
@@ -13,6 +13,10 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "mongodb": "^5.7.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "^18.2.0",
