--- a/carlos-pdf/package.json
+++ b/carlos-pdf/package.json
@@ -21,9 +21,12 @@
     "postcss": "8.4.26",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.7.20",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1"
