--- a/carlos-pdf/package.json
+++ b/carlos-pdf/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "js-cookie": "^3.0.5",
     "mongodb": "^5.7.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
