--- a/carlos-pdf/package.json
+++ b/carlos-pdf/package.json
@@ -22,6 +22,7 @@
     "postcss": "8.4.26",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-spinners": "^0.13.8",
     "sweetalert2": "^11.7.20",
     "swiper": "^10.0.4",
